# quantified_self_project

./: pyproject.toml
data/interim/: 01_data_processed.csv  01_data_processed.pkl
src/data/: make_dataset.py
