[tool.poetry]
name = "quantified-self-project"
version = "0.1.0"
description = "Implementation of machine learning fitness tracker by Dave Ebbelaar: https://www.youtube.com/watch?v=cCONIdrM2VI&list=PL-Y17yukoyy0sT2hoSQxn1TdV0J7-MX4K&index=1"
authors = ["jnassar <jn.masasin@gmail.com>"]
readme = "README.md"
packages = [{include = "quantified_self_project"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
pydantic = "^2.1.1"
missingno = "^0.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
